Added database connection
{localhost}/Articles
-return lists of articles

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,9 @@
 {
+ // "ConnectionStrings": {
+ //   "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-News-2749D51B-9A12-400E-A279-F274B393FC56;Trusted_Connection=True;MultipleActiveResultSets=true"
+ // },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-News-2749D51B-9A12-400E-A279-F274B393FC56;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;uid=root;password=password;database=news;port=3306"
   },
   "Logging": {
     "LogLevel": {
