--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-News-2749D51B-9A12-400E-A279-F274B393FC56;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-News-2749D51B-9A12-400E-A279-F274B393FC56;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
+
+
+
