--- a/web.config
+++ b/web.config
@@ -4,6 +4,6 @@
   password = "your_password"
   -->
   <connectionStrings>
-    <add name="ConnectString" connectionString="Data Source=localhost;uid=root;password=password;database=news;port=3306;CharSet=utf8" providerName="MySql.Data.MySqlClient" />
+    <add name="ConnectString" connectionString="Data Source=localhost;uid=root;password=gregers;database=news;port=3306;CharSet=utf8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
