--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,6 @@
 {
- // "ConnectionStrings": {
- //   "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-News-2749D51B-9A12-400E-A279-F274B393FC56;Trusted_Connection=True;MultipleActiveResultSets=true"
- // },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;uid=root;password=password;database=news;port=3306"
+    "DefaultConnection": "Server=localhost;uid=root;password=gregers;database=news;port=3306"
   },
   "Logging": {
     "LogLevel": {
