--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;uid=root;password=gregers;database=news;port=3306"
+    "DefaultConnection": "Server=localhost;uid=root;password=password;database=news;port=3306"
   },
   "Logging": {
     "LogLevel": {
