Set new connection string to azure server

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;uid=root;password=gregers;database=news;port=3306"
+    "DefaultConnection": "Server=outrightnews-db.mysql.database.azure.com; Port=3306; Database=news; Uid=outrightnews@outrightnews-db; Pwd=Gregers2312; SslMode=Preferred;"
   },
   "Logging": {
     "LogLevel": {
