Revert "Forgot password email"

--- a/web.config
+++ b/web.config
@@ -5,10 +5,7 @@
   -->
  
   <connectionStrings>
-    <add name="ConnectString" connectionString="Data Source=localhost;uid=root;password=gregers;database=news;port=3306;CharSet=utf8" providerName="MySql.Data.MySqlClient" />
+    <add name="ConnectString" connectionString="Data Source=localhost;uid=root;password=password;database=news;port=3306;CharSet=utf8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
-  
-  
-
  
 </configuration>
